tests/ui/pattern/usefulness/issue-30240.stderr
error[E0004]: non-exhaustive patterns: `&_` not covered
  --> $DIR/issue-30240.rs:2:11
   |
LL |     match "world" {
   |           ^^^^^^^ pattern `&_` not covered
   |
   = note: the matched value is of type `&str`
   = note: `&str` cannot be matched exhaustively, so a wildcard `_` is necessary
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         "hello" => {},
LL +         &_ => todo!()
   |

error[E0004]: non-exhaustive patterns: `&_` not covered
  --> $DIR/issue-30240.rs:6:11
   |
LL |     match "world" {
   |           ^^^^^^^ pattern `&_` not covered
   |
   = note: the matched value is of type `&str`
   = note: `&str` cannot be matched exhaustively, so a wildcard `_` is necessary
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         "hello" => {},
LL +         &_ => todo!()
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
